--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -304,17 +304,30 @@
                                 <color key="textColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUx-S4-1DH">
+                                <rect key="frame" x="20" y="110" width="560" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="02L-Fv-jdA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="PUx-S4-1DH" firstAttribute="top" secondItem="Dm2-BH-dEH" secondAttribute="bottom" constant="8" id="2Ia-nv-k91"/>
                             <constraint firstItem="Dm2-BH-dEH" firstAttribute="top" secondItem="AsN-Zi-fd7" secondAttribute="bottom" constant="8" id="LHY-BX-5yC"/>
                             <constraint firstItem="llG-vq-waV" firstAttribute="centerX" secondItem="1qz-sj-lXm" secondAttribute="centerX" id="U5E-Sa-E9y"/>
                             <constraint firstItem="Dm2-BH-dEH" firstAttribute="centerX" secondItem="1qz-sj-lXm" secondAttribute="centerX" id="WSl-kt-8xd"/>
                             <constraint firstItem="8Fz-o1-VWa" firstAttribute="top" secondItem="llG-vq-waV" secondAttribute="bottom" constant="32" id="fLu-Ps-r3h"/>
+                            <constraint firstItem="PUx-S4-1DH" firstAttribute="leading" secondItem="1qz-sj-lXm" secondAttribute="leadingMargin" id="pWI-M7-5E4"/>
+                            <constraint firstItem="PUx-S4-1DH" firstAttribute="trailing" secondItem="1qz-sj-lXm" secondAttribute="trailingMargin" id="u0b-HX-IsJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0Ju-eU-Y6v"/>
                     <connections>
+                        <outlet property="sarcasmLabel" destination="PUx-S4-1DH" id="tOa-Cj-ggO"/>
                         <outlet property="scanningLabel" destination="llG-vq-waV" id="VjH-2p-6cl"/>
                     </connections>
                 </viewController>
