--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -956,6 +956,20 @@
                                             <action selector="exportToContacts:" destination="gnE-Ee-Ssr" eventType="touchUpInside" id="IMj-LL-boP"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXa-rX-miD">
+                                        <rect key="frame" x="329" y="26" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="YB6-un-tHT"/>
+                                            <constraint firstAttribute="width" constant="46" id="t8v-bA-PL5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="15"/>
+                                        <state key="normal" title="X">
+                                            <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="deleteConnection:" destination="gnE-Ee-Ssr" eventType="touchUpInside" id="5Is-sx-BNb"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -963,6 +977,8 @@
                                     <constraint firstAttribute="height" constant="64" id="86l-fs-iXk"/>
                                     <constraint firstAttribute="trailing" secondItem="o3W-BE-I4X" secondAttribute="trailing" constant="8" id="GFo-aN-XuU"/>
                                     <constraint firstAttribute="bottom" secondItem="4xa-44-4kd" secondAttribute="bottom" constant="8" id="UFo-Ho-fHd"/>
+                                    <constraint firstAttribute="bottom" secondItem="fXa-rX-miD" secondAttribute="bottom" constant="8" id="Z3C-2y-4Sm"/>
+                                    <constraint firstAttribute="trailing" secondItem="fXa-rX-miD" secondAttribute="trailing" constant="8" id="nfD-UG-zi1"/>
                                     <constraint firstItem="4xa-44-4kd" firstAttribute="leading" secondItem="kyv-o4-fbb" secondAttribute="leading" constant="8" id="qlJ-Ij-ZoB"/>
                                 </constraints>
                             </view>
